qtmux: use segment.start or last buffer end time in case of missing DTS

https://bugzilla.gnome.org/show_bug.cgi?id=707340